--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "napoleon/magento",
     "version": "0.0.1",
     "require": {
-        "napoleon/transformer": "*"
+        "napoleon/transformer": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.5.0"
